[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_JWOGRADY"
version = "0.0.1"
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

authors = [
  { name = "jwogrady", email = "john@status26.com" },
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/jwogrady/sampleproject"
Issues = "https://github.com/jwogrady/sampleproject/issues"